--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   };
 
   function getTheLATD () {
-    branch.lastAttributedTouchData(function (err, data){console.log(data);});
+    branch.lastAttributedTouchData(7, function (err, data){console.log(data);});
   };
 
   function makeLink () {
